# Imgui-ahahah

./: .gitignore  README.md  local.properties
app/: build.gradle
app/src/main/jni/: CMakeLists.txt  InputHook.cpp  Main.cpp
app/src/main/jni/Data/Fonts/: Roboto-Regular.cpp  Roboto-Regular.h
app/src/main/jni/ImGui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp
app/src/main/jni/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
app/src/main/jni/Includes/: JNIStuff.cpp  JNIStuff.h  Loader.h  Logger.h  Macros.h  Utils.h
app/src/main/jni/Includes/BNM-Android/: Android.mk  CMakeLists.txt  LICENSE  README.md  README_RU.md
app/src/main/jni/Includes/BNM-Android/include/BNM/: BasicMonoStructures.hpp  Class.hpp  ClassesManagement.hpp  ComplexMonoStructures.hpp  Coroutine.hpp  DebugMessages.hpp  Defaults.hpp  Delegates.hpp  Event.hpp  EventBase.hpp  Exceptions.hpp  Field.hpp  FieldBase.hpp  Il2CppHeaders.hpp  Image.hpp  Loading.hpp  Method.hpp  MethodBase.hpp  Operators.hpp  Property.hpp  PropertyBase.hpp  UnityStructures.hpp  Utils.hpp
app/src/main/jni/Includes/BNM-Android/include/BNM/Il2CppHeaders/: 2017.1.h  2017.4.h  2018.1.h  2018.2.h  2018.4.h  2019.2.h  2019.3.h  2019.4.h  2020.1.h  2020.2.h  2020.3.h  2021.1.h  2021.2.h  2021.3.h  2022.1.h  2022.2.h  2023.1.h  5.6.4f1.h
app/src/main/jni/Includes/BNM-Android/include/BNM/UnityStructures/: Color.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Ray.hpp  RaycastHit.hpp  RaycastHit2D.hpp  Rect.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
app/src/main/jni/Includes/BNM-Android/src/: Class.cpp  ClassesManagement.cpp  Coroutine.cpp  Defaults.cpp  Delegates.cpp  EventBase.cpp  Exceptions.cpp  FieldBase.cpp  Hooks.cpp  Image.cpp  Internals.cpp  Loading.cpp  MethodBase.cpp  MonoStructures.cpp  PropertyBase.cpp  UnityStructures.cpp  Utils.cpp
app/src/main/jni/Includes/BNM-Android/src/private/: Internals.hpp
app/src/main/jni/Menu/: Menu.cpp  Menu.h  Themes.cpp  Themes.h
(+2 files in other folders)
